adjusted tabs header background and text color, adjusted heading text on instances landing page for alignment correction

--- a/eucaconsole/static/sass/includes/_eucavariables.scss
+++ b/eucaconsole/static/sass/includes/_eucavariables.scss
@@ -154,7 +154,7 @@ $button-border-width: 1px;
 $button-border-style: solid;
 
 // Tables
-$table-even-row-bg: #ebebec;
+$table-even-row-bg: #f5f5f5;
 
 // Tabs
 $tabs-navigation-padding: rem-calc(4) !default;
@@ -206,11 +206,12 @@ $tooltip-padding: rem-calc(5);
 @mixin table-styles-mixin {
     border: none;
     thead tr {
-        background-color: $euca-green;
+        background-color: #f5f5f5;
         th {
             padding-top: 0.5rem;
             padding-bottom: 0.5rem;
             vertical-align: top;
+            color: $euca-darkblue;
             text-transform: uppercase;
             &.actions {
                 text-align: right;
